# Graphing-and-validating-molecules-AAU-P1

./: .gitignore  Adjacency_matrix  CMakeLists.txt  README.md  main.c  miscCode
.cache/clangd/index/: Adjacency_matrix.c.181C86BEEC9C254D.idx  Adjacency_matrix.h.71E38596A79AEB6A.idx  bfs_matrix.c.4543FF743CB4569F.idx  bfs_matrix.h.4ADBE98E06CB0820.idx  dfs_matrix.c.304E24F94E4D6712.idx  dfs_matrix.h.DD3573197EC54C9A.idx  gui.c.ADFD259537D54A57.idx  gui.h.9FBFE79C31BBF38D.idx  input_validation_test.c.9CE64657277677F0.idx  main.c.93C2C2AF29DEAF4D.idx  test_BFS_matrix.c.7940E7B1E9190510.idx  test_DFS_matrix.c.9ED2AD25898B37DD.idx  test_adjacency_matrix.c.C4CEBD5AA9B856E7.idx  valence_check.c.97789F308092DACC.idx  valence_check.h.F50F1D346D125BB0.idx  valence_test.c.2A6B562361DBCBAF.idx  validation.c.7F5FEEDD62F76D0F.idx  validation.h.4EB84D1E25220E4B.idx
Databehandling/: CMakeLists.txt  bfs_matrix.c  bfs_matrix.h  dfs_matrix.c  dfs_matrix.h  valence_check.c  valence_check.h
GUI/: CMakeLists.txt  draw_text_boxed.c  draw_text_boxed.h  gui.c  gui.h  raygui_impl.c
GUI/Graph_representation/: CMakeLists.txt  Graph_representation.c  Graph_representation.h
Input/: CMakeLists.txt  validation.c  validation.h
SMILES NODE/: CMakeLists.txt  SMILESNODE.c  SMILESNODE.h  main.c
SMILES NODE/SMILESNODE.dSYM/Contents/: Info.plist
SMILES_NODE/: SMILESNODE  SMILESNODE.c  SMILESNODE.h  main.c
SMILES_NODE/SMILESNODE.dSYM/Contents/Resources/DWARF/: SMILESNODE
SMILES_NODE/SMILESNODE.dSYM/Contents/Resources/Relocations/aarch64/: SMILESNODE.yml
TEST_SMILES_NODE/: CMakeLists.txt  test_SMILESNODE.c
adjacency_matrix/: Adjacency_matrix.c  Adjacency_matrix.h  CMakeLists.txt
cmake/: mtest.cmake
smiles_nodefeature/: CMakeLists.txt  SMILESNODE.c  SMILESNODE.h
test/: CMakeLists.txt  input_validation_test.c  test_BFS_matrix.c  test_DFS_matrix.c  test_adjacency_matrix.c  test_smilesnode.c  test_toxicphere.c  valence_test.c
test for SMILES NODE/: CMakeLists.txt  test_SMILESNODE.c
toxicphore/: CMakeLists.txt  toxicphore.c  toxicphore.h
